# mac-wine-installer

./: README.md  noxfile.py  pyproject.toml
.github/workflows/: pdoc.yml
docs/: demo.gif.REMOVED.git-id
docs/pics/: program_logo.png.REMOVED.git-id  winecfg.png.REMOVED.git-id
src/: main.py
src/ci/: utils.py
test/: cli_test.py
tests/: cli_test.py
